--- a/package.json
+++ b/package.json
@@ -9,16 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.3.1",
+    "@lidofinance/eth-ui-primitives": "^0.24.0",
+    "@lidofinance/lido-ui": "^3.6.1",
+    "@lidofinance/next-pages": "^0.25.0",
+    "@lidofinance/ui-primitives": "^0.24.0",
+    "@plasmicapp/loader-nextjs": "^1.0.265",
+    "@plasmicapp/react-web": "^0.2.219",
+    "@reef-knot/wallets-helpers": "^1.0.1",
+    "@swc/helpers": "^0.5.1",
+    "ethers": "^5.7.2",
+    "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
+    "reef-knot": "1.2.0",
+    "styled-components": "^5.3.10",
+    "wagmi": "0.11.7"
   },
   "devDependencies": {
+    "@lidofinance/eslint-config": "^0.20.0",
+    "@next/eslint-plugin-next": "^13.3.1",
     "@types/node": "18.16.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "eslint": "8.39.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
     "eslint-config-next": "13.3.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-node": "^0.3.7",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-sonarjs": "^0.19.0",
+    "eslint-plugin-unicorn": "^47.0.0",
+    "prettier": "^2.8.8",
     "typescript": "5.0.4"
   }
 }
