--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untitled3",
+  "name": "lido-plasmic",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -50,6 +50,6 @@
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-unicorn": "^47.0.0",
     "prettier": "^2.8.8",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   }
 }
