--- a/.github/workflows/plasmic.yml
+++ b/.github/workflows/plasmic.yml
@@ -61,6 +61,8 @@ jobs:
           sync_action: ${{ github.event.client_payload.data.syncAction }}
           title: ${{ github.event.client_payload.data.title }}
           description: ${{ github.event.client_payload.data.description }}
+      - name: Lint and format
+        run: yarn lint
       - id: build
         name: Building Plasmic app...
         if: ${{ github.event.client_payload.data.publish }}
