--- a/.prettierrc
+++ b/.prettierrc
@@ -8,8 +8,8 @@
                 "singleQuote": true,
                 "printWidth": 120,
                 "semi": false,
-                "trailingComma": "all",
-            },
-        ],
-    },
-};
+                "trailingComma": "all"
+            }
+        ]
+    }
+}
