--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@lidofinance/lido-ui": "^3.6.1",
     "@lidofinance/next-pages": "^0.25.0",
     "@lidofinance/ui-primitives": "^0.24.0",
-    "@plasmicapp/cli": "^0.1.284",
+    "@plasmicapp/cli": "^0.1.286",
     "@plasmicapp/loader-nextjs": "^1.0.265",
     "@plasmicapp/react-web": "^0.2.219",
     "@reef-knot/wallets-helpers": "^1.0.1",
@@ -24,12 +24,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
-    "reef-knot": "1.2.0",
+    "reef-knot": "^1.3.2",
     "styled-components": "^5.3.10",
     "stylelint": "^15.6.2",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-order": "^6.0.3",
-    "wagmi": "0.11.7"
+    "wagmi": "0.12.12"
   },
   "devDependencies": {
     "@lidofinance/eslint-config": "^0.20.0",
@@ -53,6 +53,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-unicorn": "^47.0.0",
+    "eslint-scope": "^7.2.0",
     "prettier": "^2.8.8",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-group-selectors": "^1.0.9",
