--- a/package.json
+++ b/package.json
@@ -9,34 +9,44 @@
     "lint": "eslint --fix . && stylelint --fix **/*.css"
   },
   "dependencies": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/constants": "^5.7.0",
+    "@ethersproject/units": "^5.7.0",
+    "@lido-sdk/helpers": "^1.4.10",
     "@lidofinance/eth-ui-primitives": "^0.24.0",
     "@lidofinance/lido-ui": "^3.6.1",
     "@lidofinance/next-pages": "^0.25.0",
     "@lidofinance/ui-primitives": "^0.24.0",
-    "@plasmicapp/cli": "^0.1.286",
-    "@plasmicapp/loader-nextjs": "^1.0.265",
-    "@plasmicapp/react-web": "^0.2.219",
+    "@plasmicapp/cli": "^0.1.292",
+    "@plasmicapp/host": "^1.0.149",
+    "@plasmicapp/loader-nextjs": "^1.0.289",
+    "@plasmicapp/react-web": "^0.2.227",
+    "@plasmicpkgs/antd5": "^0.0.82",
     "@reef-knot/wallets-helpers": "^1.0.1",
     "@swc/helpers": "^0.5.1",
-    "eslint-plugin-typescript-sort-keys": "^2.3.0",
+    "@wagmi/chains": "^1.1.0",
+    "@wagmi/core": "^1.1.1",
     "ethers": "^5.7.2",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "etherscan-api": "^10.3.0",
+    "next": "^13.4.5",
+    "notion-client": "^6.16.0",
+    "notion-types": "^6.16.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "react-notion-x": "^6.16.0",
     "reef-knot": "^1.3.2",
     "styled-components": "^5.3.10",
-    "stylelint": "^15.6.2",
-    "stylelint-config-standard": "^33.0.0",
-    "stylelint-order": "^6.0.3",
     "wagmi": "0.12.12"
   },
   "devDependencies": {
     "@lidofinance/eslint-config": "^0.20.0",
     "@next/eslint-plugin-next": "^13.3.1",
     "@types/node": "18.16.2",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
+    "@types/react": "^18.2.11",
+    "@types/react-dom": "^18.2.4",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
@@ -51,12 +61,16 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-sonarjs": "^0.19.0",
-    "eslint-plugin-unicorn": "^47.0.0",
+    "eslint-plugin-sonarjs": "^0.14.0",
+    "eslint-plugin-typescript-sort-keys": "^2.3.0",
+    "eslint-plugin-unicorn": "^45.0.0",
     "eslint-scope": "^7.2.0",
     "prettier": "^2.8.8",
+    "stylelint": "^15.6.2",
     "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^33.0.0",
     "stylelint-group-selectors": "^1.0.9",
-    "typescript": "^5.0.4"
+    "stylelint-order": "^6.0.3",
+    "typescript": "^5.1.3"
   }
 }
